# bbc-weather-cli

./: .gitignore  CHANGELOG.md  README.md  bbc-weather-cli.cabal  default.nix  flake.nix  release.nix  shell.nix
app/: JSONTypes.hs  Main.hs  MainArgs.hs  Utils.hs
waybar/: example-config.json
