cabal-version:      2.4
name:               bbc-weather-cli
version:            0.5.0.0
synopsis:           A cli tool to fetch BBC weather reports and forecasts

description:        A cli tool to fetch BBC weather reports from the BBC's JSON API.
                    Originally created to support a custom waybar module for a sway wm + waybar desktop
homepage:           https://github.com/vkraven/bbc-weather-cli

bug-reports:        https://github.com/vkraven/bbc-weather-cli/issues
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             vkraven
maintainer:         felixk@vkraven.com

category:           Web
extra-source-files: CHANGELOG.md

executable bbc-weather-cli
    main-is:          Main.hs
    other-modules:    JSONTypes
                    , Utils
                    , MainArgs
    ghc-options:
                -O2 
    -- other-extensions:
    build-depends:    base >=4.14.3.0
                    , http-client
                    , http-client-tls
                    , http-types
                    , transformers
                    , split
                    , aeson
                    , time
                    , scientific
                    , bytestring
                    , exceptions
                    , directory
                    , aeson-pretty
                    , cmdargs
                    , uri-encode
    hs-source-dirs:   app
    default-language: Haskell2010
